@@ -25,8 +25,6 @@
     <IndentHtml>False</IndentHtml>
     <HelpFileVersion>${project.version.numeric}</HelpFileVersion>
     <DocumentationSources>
-      <DocumentationSource sourceFile="${bin.dir}/Iesi.Collections.dll" />
-		<DocumentationSource sourceFile="${bin.dir}/Iesi.Collections.xml" />
 		<DocumentationSource sourceFile="${bin.dir}/NHibernate.dll" />
 		<DocumentationSource sourceFile="${bin.dir}/Nhibernate.xml" />
 	 </DocumentationSources>
