@@ -18,7 +18,7 @@
 				update="false" insert="false"  />
 		
 		
-		<set name="offspring" order-by="father_id">
+		<set name="offspring">
 			<key column="mother_id"/>
 			<one-to-many class="Animal"/>
 		</set>
