@@ -1,13 +1,0 @@
-namespace NHibernate.Test.GenericTest.OrderedSetGeneric
-{
-	public class B
-	{
-		public virtual int Id { get; set; }
-
-		public virtual int OrderBy { get; set; }
-
-		public virtual string Name { get; set; }
-
-		public virtual int AId { get; set; }
-	}
-}
