@@ -69,9 +69,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\net\Antlr3.Runtime.dll</HintPath>
     </Reference>
-    <Reference Include="Iesi.Collections">
-      <HintPath>..\..\lib\net\4.0\Iesi.Collections.dll</HintPath>
-    </Reference>
     <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\net\log4net.dll</HintPath>
@@ -406,9 +403,6 @@
     <Compile Include="GenericTest\MapGeneric\B.cs" />
     <Compile Include="GenericTest\MapGeneric\MapGenericFixture.cs" />
     <Compile Include="GenericTest\Methods\Fixture.cs" />
-    <Compile Include="GenericTest\OrderedSetGeneric\A.cs" />
-    <Compile Include="GenericTest\OrderedSetGeneric\B.cs" />
-    <Compile Include="GenericTest\OrderedSetGeneric\OrderedSetFixture.cs" />
     <Compile Include="GenericTest\Overall\A.cs" />
     <Compile Include="GenericTest\Overall\Fixture.cs" />
     <Compile Include="GenericTest\SetGeneric\A.cs" />
@@ -3455,7 +3449,6 @@
     <EmbeddedResource Include="EntityModeTest\Xml\Basic\Employer.hbm.xml" />
     <EmbeddedResource Include="SqlTest\Identity\MsSQL\MSSQLIdentityInsertWithStoredProcs.hbm.xml" />
     <EmbeddedResource Include="NHSpecificTest\NH1508\Mappings.hbm.xml" />
-    <EmbeddedResource Include="GenericTest\OrderedSetGeneric\OrderedSetFixture.hbm.xml" />
     <EmbeddedResource Include="NHSpecificTest\NH1293\Mappings.hbm.xml" />
     <EmbeddedResource Include="NHSpecificTest\NH1490\Mappings.hbm.xml" />
     <EmbeddedResource Include="NHSpecificTest\NH1492\Mappings.hbm.xml" />
