@@ -26,7 +26,6 @@
 			<include name="System.XML.dll" />
 			<include name="System.Xml.Linq.dll" />
 			<include name="System.Data.dll" />
-			<include name="Iesi.Collections.dll" />
 			<include name="Antlr3.Runtime.dll" />
 			<include name="Remotion.Linq.dll" />
 		</assemblyfileset>
