@@ -12,10 +12,6 @@
     </description>
     <language>en-US</language>
     <tags>ORM, DataBase, DAL, ObjectRelationalMapping</tags>
-    <dependencies>
-	  <!-- Bet that if there is ever an Iesi.Collections 5.0, it would be incompatible. -->
-      <dependency id="Iesi.Collections" version="[4,5)" />
-    </dependencies>
 	<projectUrl>
 		http://www.nhforge.org
 	</projectUrl>
