@@ -1,6 +1,5 @@
 using System;
 using System.Collections;
-using Iesi.Collections;
 using System.Collections.Generic;
 
 namespace NHibernate.Util
