@@ -1,3 +1,9 @@
+Build vNext
+=============================
+
+* Ordered sets are no longer supported by DefaultCollectionTypeFactory
+
+
 Build 4.0.0.Alpha1
 =============================
 
